allow java reflection
Signed-off-by: shikharj05 <8859327+shikharj05@users.noreply.github.com>